force-app/main/default/objects/Opportunity/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <description>This field is used to determine which Event Type should be created. The value is set through imports and is mapped with the value on Lead.</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RequestType</valueSetName>
    </valueSet>
</CustomField>