force-app/main/default/objects/Opportunity/fields/SalesforceInstanceUrl__c.field-meta.xml
<CustomField>
    <fullName>SalesforceInstanceUrl__c</fullName>
    <description>This field is used to store the Salesforce Intance Url</description>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( '/services', $Api.Partner_Server_URL_300))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Instance Url</label>
    <type>Text</type>
</CustomField>