force-app/main/default/objects/Opportunity/fields/SalesOfficeProgram__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field populates the corresponding Sales Office of Opportunity based on Market, Program and Salesoffice</description>
    <label>Sales Office / Program</label>
    <referenceTo>SalesOfficeProgram__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>