force-app/main/default/objects/Opportunity/fields/SampleField1__c.field-meta.xml
<CustomField>
    <fullName>SampleField1__c</fullName>
    <label>SampleField1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>