force-app/main/default/objects/Opportunity/fields/SampleField__c.field-meta.xml
<CustomField>
    <fullName>SampleField__c</fullName>
    <externalId>true</externalId>
    <label>SampleField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>