force-app/main/default/objects/Opportunity/fields/SBRTaskOverdue__c.field-meta.xml
<CustomField>
    <fullName>SBRTaskOverdue__c</fullName>
    <description>Returns number of days of oldest SBR Task</description>
    <formula>if(( SendBrochureDueDateTime__c - Now() &lt; 0), NOW() - SendBrochureDueDateTime__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the customer requested a brochure</inlineHelpText>
    <label>SBR Task Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>