force-app/main/default/objects/Opportunity/fields/SCT_IsExpress__c.field-meta.xml
<CustomField>
    <fullName>SCT_IsExpress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the System Call Task is an Express Call</description>
    <label>Is Express</label>
    <type>Checkbox</type>
</CustomField>