force-app/main/default/objects/Opportunity/fields/SCT_OriginalDueDate__c.field-meta.xml
<CustomField>
    <fullName>SCT_OriginalDueDate__c</fullName>
    <description>This field stores original due date of task.</description>
    <label>Original Due Date</label>
    <type>DateTime</type>
</CustomField>