force-app/main/default/objects/Opportunity/fields/SendBrochure__c.field-meta.xml
<CustomField>
    <fullName>SendBrochure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate upon manually creating an Opportunity whether a Brochure still needs to be send or not, since its possible that the customer walked in and received the brochure already.</description>
    <label>Send Brochure</label>
    <type>Checkbox</type>
</CustomField>