force-app/main/default/objects/Opportunity/fields/SendBrochureDueDateTime__c.field-meta.xml
<CustomField>
    <fullName>SendBrochureDueDateTime__c</fullName>
    <description>Min value of Due Dates from SBR tasks from opportunity.</description>
    <label>Send Brochure Due DateTime</label>
    <type>DateTime</type>
</CustomField>