force-app/main/default/objects/Opportunity/fields/SentBrochures__c.field-meta.xml
<CustomField>
    <fullName>SentBrochures__c</fullName>
    <inlineHelpText>All the brochures which we have sent to an opportunity</inlineHelpText>
    <label>Sent Brochures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>