force-app/main/default/objects/Opportunity/fields/SourceCodeAuto__c.field-meta.xml
<CustomField>
    <fullName>SourceCodeAuto__c</fullName>
    <description>This field is used to store the Source Code of the customer when entering the system.</description>
    <label>Source Code Auto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>