force-app/main/default/objects/Opportunity/fields/TemplateKey__c.field-meta.xml
<CustomField>
    <fullName>TemplateKey__c</fullName>
    <formula>Text(Market__c) +'-'+Text(Program__c)+'-'+Text(Account.Language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Key</label>
    <type>Text</type>
</CustomField>