force-app/main/default/objects/Opportunity/fields/TFBypassStageValidation__c.field-meta.xml
<CustomField>
    <fullName>TFBypassStageValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TECHNICAL FIELD: This field is used to allow the system to bypass the Stage Validation in order to update the Stage of the Opportunity automatically.</description>
    <label>TF Bypass Stage Validation</label>
    <type>Checkbox</type>
</CustomField>