force-app/main/default/objects/Opportunity/fields/TimeOutDate__c.field-meta.xml
<CustomField>
    <fullName>TimeOutDate__c</fullName>
    <description>This field is used to determine the Time Out Date of the Opportunity. It determines the date on which the Stage should move from Sales Closed to Closed Lost.</description>
    <label>Time Out Date</label>
    <type>Date</type>
</CustomField>