force-app/main/default/objects/Opportunity/fields/UnreachedIn48h__c.field-meta.xml
<CustomField>
    <fullName>UnreachedIn48h__c</fullName>
    <formula>AND(ISPICKVAL(SCT_CallType__c, 'UCC'), CreatedDate - NOW() &lt;= 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unreached In 48h</label>
    <type>Checkbox</type>
</CustomField>