force-app/main/default/objects/Opportunity/fields/WhenMonth__c.field-meta.xml
<CustomField>
    <fullName>WhenMonth__c</fullName>
    <description>This field represents the month selected for the 'When' field in Log a Call component</description>
    <label>When Month</label>
    <length>15</length>
    <type>Text</type>
</CustomField>