force-app/main/default/objects/Opportunity/fields/WhenYear__c.field-meta.xml
<CustomField>
    <fullName>WhenYear__c</fullName>
    <description>This field represents the Year selected in the 'When' field of Log a Call component</description>
    <label>When Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>