force-app/main/default/objects/Opportunity/validationRules/DoNotEditActiveOpportunityStage.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditActiveOpportunityStage</fullName>
    <active>true</active>
    <description>This validation rule is used to block users from editing the Opportunity Stage so that Stage Movements are consistent throughout the system.</description>
    <errorConditionFormula>NOT($Setup.BypassTriggersValidation__c.DisableValidation__c) 
&amp;&amp; 
IsActive__c = TRUE
&amp;&amp;
ISCHANGED( StageName )
&amp;&amp;
NOT(ISCHANGED( LastAutomationUpdateDateTime__c ))</errorConditionFormula>
    <errorMessage>Please do not update the Stage of the Opportunity. Only automatic Stage Movements are allowed.</errorMessage>
</ValidationRule>