force-app/main/default/objects/Opportunity/validationRules/DoNotEditInactiveOpportunities.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditInactiveOpportunities</fullName>
    <active>true</active>
    <description>This Validation Rule is used to block users from editing an Inactive Opportunity</description>
    <errorConditionFormula>NOT($Setup.BypassTriggersValidation__c.DisableValidation__c)
&amp;&amp;
NOT(ISCHANGED( IsActive__c ) )
&amp;&amp;
IsActive__c = False</errorConditionFormula>
    <errorMessage>The Opportunity you are attempting to edit is Inactive. Please work with the latest Active Opportunity or create a new Opportunity.</errorMessage>
</ValidationRule>