force-app/main/default/objects/Opportunity/validationRules/DoNotSendBrochureIfAddresIsNotProvided.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotSendBrochureIfAddresIsNotProvided</fullName>
    <active>true</active>
    <errorConditionFormula>AND(SendBrochure__c, !Account.HasAddress__c)</errorConditionFormula>
    <errorDisplayField>SendBrochure__c</errorDisplayField>
    <errorMessage>Please enter the address for the customer to send a brochure</errorMessage>
</ValidationRule>