force-app/main/default/objects/Opportunity/validationRules/MarketMismatchAccountOpportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>MarketMismatchAccountOpportunity</fullName>
    <active>true</active>
    <description>Opportunity should have same market as its corresponding Account.</description>
    <errorConditionFormula>And(
NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ),
TEXT( Account.Market__c) &lt;> TEXT(  Market__c )
)</errorConditionFormula>
    <errorMessage>The Account and Opportunity should belong to the same Market.</errorMessage>
</ValidationRule>