force-app/main/default/objects/Opportunity/validationRules/OnlyOneActiveOpportunityPerAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneActiveOpportunityPerAccount</fullName>
    <active>true</active>
    <description>Each Account can have only one Active opportunity.</description>
    <errorConditionFormula>And( 
NOT($Setup.BypassTriggersValidation__c.DisableValidation__c ), ((Account.ActiveOpportunities__c >=1)&amp;&amp; (ISNEW())) ||(ISCHANGED(AccountId ) &amp;&amp; (Account.ActiveOpportunities__c >=1 ) ))</errorConditionFormula>
    <errorMessage>Active opportunity already exists for this Personal Account.</errorMessage>
</ValidationRule>