force-app/main/default/objects/Opportunity/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Ranking__c</columns>
    <columns>Program__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SalesOffice__c</columns>
    <columns>Market__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>