force-app/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Ranking__c</columns>
    <columns>Program__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SalesOffice__c</columns>
    <columns>Market__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Opportunity Pipeline</label>
</ListView>