force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Ranking__c</columns>
    <columns>Program__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SalesOffice__c</columns>
    <columns>Market__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>