force-app/main/default/objects/Opportunity/listViews/NewThisWeek.listView-meta.xml
<ListView>
    <fullName>NewThisWeek</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Ranking__c</columns>
    <columns>Program__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SalesOffice__c</columns>
    <columns>Market__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HasPQorRESInPast30Days__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>New This Week</label>
</ListView>